[package]
name = "stashlog"
version = "0.0.13"
edition = "2021"
description = "A minimalistic Rust library for Logstash Event format logging."
license = "MIT" 
readme = "README.md"

[dev-dependencies]
tempfile = "3.2"

[dependencies]
chrono = "0.4.38"
gethostname = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
